--- a/index.css
+++ b/index.css
@@ -25,3 +25,12 @@ header h1 {
 	margin: 0;
 	padding: 0;
 }
+
+.sidebar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 150px;
+    background-color:rgb(38, 50, 56);
+}
