--- a/index.css
+++ b/index.css
@@ -27,6 +27,12 @@ header h1 {
 	padding: 0;
 }
 
+.menu {
+	height: 35px;
+	width: 100%;
+	background-color: darkmagenta;
+}
+
 .container {
 	height: 100%;
 	display: flex;
@@ -55,7 +61,6 @@ header h1 {
 .feed {
 	
 }
-
 
 #preview {
 	flex: 1;
