--- a/index.css
+++ b/index.css
@@ -1,12 +1,21 @@
-html,
-body {
-	padding: 0;
-	margin: 0;
+html {
+	margin: 0px;
+    padding: 0px;
 	height: 100%;
+	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif; 
 }
 
 body {
-	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
+	padding: 0px;
+	margin: 0px;
+	background-color: #2D2D30;
+	border: 1px solid #68217A;
+	border-bottom: 24px solid  #68217A;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 }
 
 header {
