--- a/index.css
+++ b/index.css
@@ -36,10 +36,48 @@ header h1 {
 	padding: 0;
 }
 
-.menu {
-	height: 35px;
-	width: 100%;
-	background-color: darkmagenta;
+button.clean-gray {
+  background-color: #eeeeee;
+  background-image: linear-gradient(top, #eeeeee, #cccccc);
+  border: 1px solid #ccc;
+  border-bottom: 1px solid #bbb;
+  border-radius: 3px;
+  color: #333;
+  font: bold 11px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  padding: 8px 0;
+  text-align: center;
+  text-shadow: 0 1px 0 #eee;
+  width: 150px; 
+  }
+  
+  button.clean-gray:hover {
+    background-color: #dddddd;
+    background-image: linear-gradient(top, #dddddd, #bbbbbb);
+    border: 1px solid #bbb;
+    border-bottom: 1px solid #999;
+    cursor: pointer;
+    text-shadow: 0 1px 0 #ddd; }
+  
+  button.clean-gray:active {
+    border: 1px solid #aaa;
+    border-bottom: 1px solid #888;
+    -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
+    box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee; }
+
+#add-dialog {
+    position: relative;
+    width: 200px;
+}
+
+#add-dialog input {
+    width: 194px;
+}
+
+#add-dialog button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 3px 0;
 }
 
 .container {
