--- a/index.css
+++ b/index.css
@@ -48,21 +48,23 @@ button.clean-gray {
   text-align: center;
   text-shadow: 0 1px 0 #eee;
   width: 150px; 
-  }
+}
   
-  button.clean-gray:hover {
+button.clean-gray:hover {
     background-color: #dddddd;
     background-image: linear-gradient(top, #dddddd, #bbbbbb);
     border: 1px solid #bbb;
     border-bottom: 1px solid #999;
     cursor: pointer;
-    text-shadow: 0 1px 0 #ddd; }
+    text-shadow: 0 1px 0 #ddd; 
+	}
   
-  button.clean-gray:active {
+button.clean-gray:active {
     border: 1px solid #aaa;
     border-bottom: 1px solid #888;
     -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
-    box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee; }
+    box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee; 
+}
 
 #add-dialog {
     position: relative;
