--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ html {
 	margin: 0px;
     padding: 0px;
 	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif; 
+	background-color: rgb(54, 57, 62);
+	color: #ffffff;
 }
 
 .container {
@@ -27,6 +29,7 @@ button.clean-gray {
   text-align: center;
   text-shadow: 0 1px 0 #eee;
   width: 150px; 
+  float: left;
 }
   
 button.clean-gray:hover {
@@ -45,22 +48,6 @@ button.clean-gray:active {
     box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee; 
 }
 
-#add-dialog {
-    position: relative;
-    width: 200px;
-}
-
-#add-dialog input {
-    width: 194px;
-}
-
-#add-dialog button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 3px 0;
-}
-
 #content {
 	flex: 2;
 	display: flex;
@@ -72,11 +59,20 @@ button.clean-gray:active {
 	color: white;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	border-right: 1px solid rebeccapurple;
+	padding: 15px;
+}
+
+#sidebar ul {
+	list-style:none;
+    padding-left:0;
 }
 
 #feeds {
 	flex: 0 1 250px;
 	overflow: hidden;
+	text-overflow: ellipsis;
+	margin: 15px;
 }
 
 #feeds:hover {
