--- a/css/titlebar.css
+++ b/css/titlebar.css
@@ -1,3 +1,9 @@
+/* Copyright © 2016 Kevin Bui
+	 This code is available under the "MIT License"
+	 Please see the file LICENSE
+ 	 for more details
+*/
+
 #title-bar {
 	-webkit-app-region: drag;
 	height: 32px;	
