--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+/* 
+    Copyright © 2016 Kevin Bui
+	This code is available under the "MIT License"
+	Please see the file LICENSE for more details
+*/
+
 .container, html, body {
     height:100%;
     margin:0;
